--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Validar CPF</title>
-  <link rel="stylesheet" href="css/bundle.css">
+  <link rel="stylesheet" href="assets/css/bundle.css">
 </head>  
 
 <body>  
@@ -27,9 +27,9 @@
       <p class="footer__wrapper__paragraph">Copyright &copy; | Jhonatan Luan - 2021</p>
     </div>
   </footer>
-  <script src="/js/jquery-3.3.1.min.js"></script>
-  <script src="/js/jquery.mask.min.js"></script>
-  <script src="/js/script.js"></script>
+  <script src="assets/js/jquery-3.3.1.min.js"></script>
+  <script src="assets/js/jquery.mask.min.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
